<resources>
    <string name="app_name">health-tracker</string>
    <string name="edit_number">Enter a number</string>
    <string name="increase_number">Increase</string>
    <string name="reset_time">Reset</string>
    <string name="on_Start">Start</string>
    <string name="on_pause">Pause</string>
    <string name="finger_excercise">Finger</string>
    <string name="timer_app">Timer</string>
    <string name="app_store">All Applications</string>
    <string name="cancel_notification">end notifications</string>
    <string name="go_diary">DIARY</string>
    <string name="input_label">Title</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="enter_quantity">enter quantity</string>
    <string name="description">description</string>
    <string name="image">image</string>

    <string name="date">Date</string>
    <string name="quote">quote</string>
    <string name="username">User Name</string>
    <string name="userNameInput">userNameInput</string>
    <string name="name2">name2</string>
    <string name="save_username">save_username</string>
    <string name="EnterUserName">Enter User Name</string>
    <string name="profilePic">Profie Picture</string>
    <string name="avatar">Avatar</string>
    <string name="updateAvatar">add profile pic</string>
    <string name="addPicture">Update Avatar</string>
    <string name="save">save changes</string>
    <string name="selectImage">Select From Camera Roll</string>
</resources>
